--- a/public/app.css
+++ b/public/app.css
@@ -1,6 +1,62 @@
+/*************************************
+ * Layout                            *
+ *************************************/
+
+* { box-sizing: border-box; }
+
+
+form#Search {
+  width: 100%;
+  display: flex;
+  display: -webkit-flex;
+  flex-direction: row;
+  -webkit-flex-direction: row;
+}
+.control {}
+.search {
+  flex: 80%;
+  -webkit-flex: 80%;
+  margin-right: 1em;
+  /* -webkit-align-self: stretch; */
+}
+.control.search input {
+  width: 100%;
+}
+.control.submit {
+  flex: 1 3em 3em;
+  -webkit-flex: 1 3em 3em; /* grow shrink basis*/
+}
+
+
+
+/*************************************
+ * Aesthetics                        *
+ *************************************/
+
 body {
   font-family: Helvetica, sans-serif;
   padding: 2em 1em;
+}
+form#Search {
+  margin: 0.5em 0;
+}
+form#Search input {
+  font-size: 1.55em;
+}
+form#Search button {
+  display: block;
+  
+  padding: 0.5em 0.75em;
+  margin-left: -0.5em;
+  margin-top: 0.25em;
+  
+  font-size: 0.8em;
+  
+  border: solid 1px #ccc;
+  border-radius: 2em;
+  
+  background: #ddd;
+  color: #444;
 }
 table {
   width: 100%;
@@ -56,6 +112,36 @@ td.message {
   text-overflow: ellipsis;
   white-space: nowrap;
 }
+/*
+@-webkit-keyframes flash {
+  0% {
+    background-color: yellow;
+    opacity: 1;
+  }
+  22% {
+    background-color: yellow;
+    opacity: 0.6;
+  }
+  77% {
+    background-color: yellow;
+    opacity: 0.3;
+  }
+  100% {
+    background-color: inherit;
+  }
+}
+tr.flash td {
+  -webkit-animation-name: flash;
+    -webkit-animation-duration: 500ms;
+    -webkit-animation-iteration-count: 1;
+    -webkit-animation-timing-function: ease-out;
+  -moz-animation-name: flash;
+    -moz-animation-duration: 500ms;
+    -moz-animation-iteration-count: 1;
+    -moz-animation-timing-function: ease-out;
+}
+*/
+
 .severity.emergency {
   background-color: #43000C;
 }
