--- a/public/app.css
+++ b/public/app.css
@@ -4,7 +4,7 @@
 
 * { box-sizing: border-box; }
 
-
+/* Search */
 form#Search {
   width: 100%;
   display: flex;
@@ -27,7 +27,22 @@ form#Search {
   -webkit-flex: 1 3em 3em; /* grow shrink basis*/
 }
 
+/* Facets */
+form#Facets {
+  width: 100%;
+  display: flex;
+  display: -webkit-flex;
+  flex-direction: row;
+  -webkit-flex-direction: row;
+  
+  /* -webkit-justify-content: space-around; */
+}
 
+.facet {
+  padding: 0.25em;
+  margin-right: 4em;
+  /* outline: solid 1px red; */
+}
 
 /*************************************
  * Aesthetics                        *
@@ -36,6 +51,10 @@ form#Search {
 body {
   font-family: Helvetica, sans-serif;
   padding: 2em 1em;
+}
+h1, h2, h3, h4, h5, h6 {
+  line-height: 1.1;
+  margin: 0;
 }
 form#Search {
   margin: 0.5em 0;
@@ -57,6 +76,14 @@ form#Search button {
   
   background: #ddd;
   color: #444;
+}
+form#Facets ol {
+  list-style-type: none;
+  padding: 0;
+  margin: 0.5em 0;
+}
+form#Facets ol li {
+  margin-bottom: 0.25em;
 }
 table {
   width: 100%;
