--- a/public/app.css
+++ b/public/app.css
@@ -4,6 +4,46 @@
 
 * { box-sizing: border-box; }
 
+html, body {
+  margin: 0;
+  padding: 0;
+}
+
+/* Page layout */
+/*
+body {
+  display: flex;
+  display: -webkit-flex;
+  flex-direction: column;
+  -webkit-flex-direction: column;
+}
+body > header, body > div#Body, body > footer {
+  border: solid 1px red;
+  width: 100%;
+}
+body > header {
+  -webkit-align-self: flex-start;
+  -webkit-flex: 1;
+}
+body > div#Body {
+  -webkit-flex: 1;
+  position: relative;
+}
+
+body > div#Body > div {
+  overflow: scroll;
+  
+  width: 100%;
+  height: 100%;
+  position: absolute;
+}
+body > footer {
+  -webkit-align-self: flex-end;
+  -webkit-flex: 1;
+  margin: auto;
+}
+*/
+
 /* Search */
 form#Search {
   width: 100%;
@@ -50,7 +90,6 @@ form#Facets {
 
 body {
   font-family: Helvetica, sans-serif;
-  padding: 2em 1em;
 }
 h1, h2, h3, h4, h5, h6 {
   line-height: 1.1;
